adjusted userFlexBasis formula and adjusted width and height of container in order to combat wrapping issues for 4 by 4 all the way to 100 by 100.

--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,9 @@ body{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    width:1000px;
+    width:1005px;
     margin: 0px;
-    height: 1000px;
+    height: 1005px;
     
 }
 
